update PPO implementation

--- a/PPO_implementation/PPO.ipynb
+++ b/PPO_implementation/PPO.ipynb
@@ -10,57 +10,7 @@
         "id": "g2yTXAw7Xx-W",
         "outputId": "8d9ed7a1-a5f6-4663-e0e2-8378477c50bb"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Collecting swig\n",
-            "  Downloading swig-4.4.0-py3-none-manylinux_2_12_x86_64.manylinux2010_x86_64.whl.metadata (3.5 kB)\n",
-            "Downloading swig-4.4.0-py3-none-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (1.9 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.9/1.9 MB\u001b[0m \u001b[31m22.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: swig\n",
-            "Successfully installed swig-4.4.0\n",
-            "Collecting box2d-py\n",
-            "  Downloading box2d-py-2.3.8.tar.gz (374 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m374.5/374.5 kB\u001b[0m \u001b[31m7.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Building wheels for collected packages: box2d-py\n",
-            "  Building wheel for box2d-py (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for box2d-py: filename=box2d_py-2.3.8-cp312-cp312-linux_x86_64.whl size=2399004 sha256=3e507bb57d81f0a9007f98609836909488db87209e8ce28728f0216e8991f4c5\n",
-            "  Stored in directory: /root/.cache/pip/wheels/d6/3c/ab/b6fd75459cadc56f4a4125d4cb387a708a59ca8589e4cc6b7d\n",
-            "Successfully built box2d-py\n",
-            "Installing collected packages: box2d-py\n",
-            "Successfully installed box2d-py-2.3.8\n",
-            "Requirement already satisfied: gym[box2d] in /usr/local/lib/python3.12/dist-packages (0.25.2)\n",
-            "Requirement already satisfied: numpy>=1.18.0 in /usr/local/lib/python3.12/dist-packages (from gym[box2d]) (2.0.2)\n",
-            "Requirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.12/dist-packages (from gym[box2d]) (3.1.2)\n",
-            "Requirement already satisfied: gym-notices>=0.0.4 in /usr/local/lib/python3.12/dist-packages (from gym[box2d]) (0.1.0)\n",
-            "Collecting box2d-py==2.3.5 (from gym[box2d])\n",
-            "  Downloading box2d-py-2.3.5.tar.gz (374 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m374.4/374.4 kB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Collecting pygame==2.1.0 (from gym[box2d])\n",
-            "  Downloading pygame-2.1.0.tar.gz (5.8 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.8/5.8 MB\u001b[0m \u001b[31m81.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
-            "  \n",
-            "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py egg_info\u001b[0m did not run successfully.\n",
-            "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
-            "  \u001b[31m╰─>\u001b[0m See above for output.\n",
-            "  \n",
-            "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25herror\n",
-            "\u001b[1;31merror\u001b[0m: \u001b[1mmetadata-generation-failed\u001b[0m\n",
-            "\n",
-            "\u001b[31m×\u001b[0m Encountered error while generating package metadata.\n",
-            "\u001b[31m╰─>\u001b[0m See above for output.\n",
-            "\n",
-            "\u001b[1;35mnote\u001b[0m: This is an issue with the package mentioned above, not pip.\n",
-            "\u001b[1;36mhint\u001b[0m: See above for details.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "! pip install swig\n",
         "! pip install box2d-py\n",
@@ -94,7 +44,7 @@
         "\n",
         "DRIVE_FOLDER = \"/content/drive/MyDrive/BipedalWalker_Project\"\n",
         "os.makedirs(DRIVE_FOLDER, exist_ok=True)\n",
-        "print(f\"✅ Saving all models to: {DRIVE_FOLDER}\")\n",
+        "print(f\"Saving all models to: {DRIVE_FOLDER}\")\n",
         "\n",
         "def show_video(video_folder=\"videos\"):\n",
         "    mp4list = glob.glob(f'{video_folder}/*.mp4')\n",
@@ -241,7 +191,6 @@
         "        self.render_freq = render_freq\n",
         "        self.device = device\n",
         "\n",
-        "        # Stat tracking for plots\n",
         "        self.ep_returns = []\n",
         "        self.ep_timesteps = []\n",
         "\n",
@@ -459,8 +408,6 @@
       },
       "outputs": [],
       "source": [
-        "## New high performing PPO hardcore script\n",
-        "\n",
         "import os, glob, io, base64, pickle, random\n",
         "from collections import deque\n",
         "\n",
@@ -486,18 +433,17 @@
         "BASE_NORMAL_MODEL = os.path.join(DRIVE_FOLDER, \"ppo_bipedal_final.pt\")\n",
         "BASE_NORMAL_STATS = os.path.join(DRIVE_FOLDER, \"obs_stats.pkl\")\n",
         "\n",
-        "# --- NEW run names so nothing overwrites ---\n",
         "RUN_TAG = \"v11\"\n",
         "CKPT_PATH  = os.path.join(DRIVE_FOLDER, f\"ppo_hardcore_{RUN_TAG}_checkpoint.pt\")\n",
         "BEST_PATH  = os.path.join(DRIVE_FOLDER, f\"ppo_hardcore_{RUN_TAG}_best.pt\")\n",
         "FINAL_PATH = os.path.join(DRIVE_FOLDER, f\"ppo_hardcore_{RUN_TAG}_final.pt\")\n",
         "PLOT_PATH  = os.path.join(DRIVE_FOLDER, f\"training_plot_{RUN_TAG}.png\")\n",
         "\n",
-        "print(\"✅ Drive folder:\", DRIVE_FOLDER)\n",
-        "print(\"✅ Checkpoint:\", CKPT_PATH)\n",
-        "print(\"✅ Best:\", BEST_PATH)\n",
-        "print(\"✅ Final:\", FINAL_PATH)\n",
-        "print(\"✅ Plot:\", PLOT_PATH)\n",
+        "print(\"Drive folder:\", DRIVE_FOLDER)\n",
+        "print(\"Checkpoint:\", CKPT_PATH)\n",
+        "print(\"Best:\", BEST_PATH)\n",
+        "print(\"Final:\", FINAL_PATH)\n",
+        "print(\"Plot:\", PLOT_PATH)\n",
         "\n",
         "\n",
         "def show_video(folder=\"videos\"):\n",
@@ -515,7 +461,24 @@
         "    \"\"\"))\n",
         "\n",
         "\n",
-        "## Tanh-squashed gaussian network\n",
+        "def make_one_env_video(seed=None, video_folder=\"videos\", name_prefix=\"eval\"):\n",
+        "    env = gym.make(\"BipedalWalkerHardcore-v3\", render_mode=\"rgb_array\")\n",
+        "    env = gym.wrappers.RecordEpisodeStatistics(env)\n",
+        "    env = gym.wrappers.NormalizeObservation(env)\n",
+        "    env = gym.wrappers.TransformObservation(env, lambda o: np.clip(o, -10, 10), env.observation_space)\n",
+        "\n",
+        "    env = gym.wrappers.RecordVideo(\n",
+        "        env,\n",
+        "        video_folder=video_folder,\n",
+        "        episode_trigger=lambda ep: True,\n",
+        "        name_prefix=name_prefix,\n",
+        "        disable_logger=True\n",
+        "    )\n",
+        "\n",
+        "    if seed is not None:\n",
+        "        env.reset(seed=int(seed))\n",
+        "    return env\n",
+        "\n",
         "def layer_init(layer, std=np.sqrt(2), bias_const=0.0):\n",
         "    nn.init.orthogonal_(layer.weight, std)\n",
         "    nn.init.constant_(layer.bias, bias_const)\n",
@@ -523,12 +486,6 @@
         "\n",
         "\n",
         "class ActorCritic(nn.Module):\n",
-        "    \"\"\"\n",
-        "    Squashed Gaussian policy:\n",
-        "      u ~ Normal(mean, std)\n",
-        "      a = tanh(u) in [-1,1]\n",
-        "      logp corrected by tanh Jacobian term\n",
-        "    \"\"\"\n",
         "    def __init__(self, obs_dim, act_dim):\n",
         "        super().__init__()\n",
         "        self.critic = nn.Sequential(\n",
@@ -562,10 +519,9 @@
         "\n",
         "    @staticmethod\n",
         "    def _squash_logprob(dist, u, eps=1e-6):\n",
-        "        # logp(u) - sum log(1 - tanh(u)^2)\n",
         "        logp_u = dist.log_prob(u).sum(dim=1)\n",
         "        a = torch.tanh(u)\n",
-        "        corr = torch.log(1.0 - a.pow(2) + eps).sum(dim=1)  # Jacobian correction\n",
+        "        corr = torch.log(1.0 - a.pow(2) + eps).sum(dim=1)\n",
         "        return logp_u - corr\n",
         "\n",
         "    def get_action_and_value(self, x, action=None, deterministic=False):\n",
@@ -584,9 +540,9 @@
         "            u = 0.5 * (torch.log1p(a_clamped) - torch.log1p(-a_clamped))  # atanh\n",
         "            logp = self._squash_logprob(dist, u)\n",
         "\n",
-        "        ent = dist.entropy().sum(dim=1)  # Proxy entropy\n",
+        "        ent = dist.entropy().sum(dim=1)\n",
         "        val = self.get_value(x)\n",
-        "        mean_a = torch.tanh(mean)        # Mean in action space for jerk penalty\n",
+        "        mean_a = torch.tanh(mean)\n",
         "        return a, logp, ent, val, mean_a\n",
         "\n",
         "\n",
@@ -642,14 +598,13 @@
         "        self.seeds = deque(d.get(\"seeds\", []), maxlen=self.maxlen)\n",
         "\n",
         "\n",
-        "\n",
         "class PPOHardcoreVectorV11:\n",
         "    def __init__(\n",
         "        self,\n",
         "        device=\"cuda\",\n",
         "        num_envs=16,\n",
-        "        rollout_steps=2048,\n",
-        "        total_env_steps=40_000_000,\n",
+        "        rollout_steps=2048,          # per env\n",
+        "        total_env_steps=40_000_000,  # across envs\n",
         "        gamma=0.99,\n",
         "        lam=0.95,\n",
         "        clip_eps=0.15,\n",
@@ -665,22 +620,21 @@
         "        logstd_min=-5.0,\n",
         "        logstd_max=-0.5,\n",
         "\n",
-        "        jerk_start_p75=240.0,         # Jerk penalty starts when 75th percentile is over this value\n",
-        "        jerk_coef_max=0.0010,         # Final jerk penalty value\n",
-        "        jerk_ramp_updates=200,        # Increases over this many updates\n",
+        "        jerk_start_p75=240.0,\n",
+        "        jerk_coef_max=0.0010,\n",
+        "        jerk_ramp_updates=200,\n",
         "\n",
         "        eval_every_updates=10,\n",
         "        eval_episodes=16,\n",
         "\n",
         "        checkpoint_every_updates=10,\n",
         "\n",
-        "        # Reseeding both hard runs and successful runs\n",
         "        reseed_p_random=0.60,\n",
         "        reseed_p_hard=0.20,\n",
         "        reseed_p_success=0.20,\n",
         "\n",
-        "        hard_pool_bottom_frac=0.20,   # Worst 20% of eval seeds\n",
-        "        success_pool_threshold=300.0, # Any eval seeds above 300 reward\n",
+        "        hard_pool_bottom_frac=0.20,\n",
+        "        success_pool_threshold=300.0,\n",
         "    ):\n",
         "        self.device = device\n",
         "        self.num_envs = num_envs\n",
@@ -911,15 +865,14 @@
         "\n",
         "        print(\n",
         "            f\"Loaded ckpt: upd={self.update} step={self.global_step} \"\n",
-        "            f\"jerk={'ON' if self.jerk_enabled else 'OFF'} \"\n",
+        "            f\"jerk={'on' if self.jerk_enabled else 'off'} \"\n",
         "            f\"hard={len(self.hard_pool.seeds)} success={len(self.success_pool.seeds)} \"\n",
         "            f\"best_p75={self.best_eval_p75:.2f}\"\n",
         "        )\n",
         "\n",
         "    def plot_results(self, window_size=50):\n",
-        "        \"\"\"Plot training curve with fixed colors + GREEN dashed jerk-on marker; save to Drive.\"\"\"\n",
         "        if not self.ep_returns:\n",
-        "            print(\"No rewards to plot.\")\n",
+        "            print(\"No rewards to plot\")\n",
         "            return\n",
         "\n",
         "        returns = np.array(self.ep_returns, dtype=np.float32)\n",
@@ -953,7 +906,7 @@
         "                color=\"green\",\n",
         "                linestyle=\"--\",\n",
         "                linewidth=2.0,\n",
-        "                label=\"Smoothness / Jerk penalty ON\"\n",
+        "                label=\"Jerk penalty on\"\n",
         "            )\n",
         "\n",
         "        plt.title(\"BipedalWalker Hardcore: Full Training Progress\")\n",
@@ -966,8 +919,37 @@
         "        plt.show()\n",
         "        print(f\"Plot saved to: {PLOT_PATH}\")\n",
         "\n",
+        "    @torch.no_grad()\n",
+        "    def record_eval_video(self, deterministic=True, max_steps=2000):\n",
+        "        video_folder = os.path.join(DRIVE_FOLDER, f\"videos_{RUN_TAG}\")\n",
+        "        os.makedirs(video_folder, exist_ok=True)\n",
         "\n",
-        "    ## Main training\n",
+        "        name_prefix = f\"upd{self.update}_step{self.global_step}\"\n",
+        "        env = make_one_env_video(\n",
+        "            seed=random.randint(0, 2_000_000_000),\n",
+        "            video_folder=video_folder,\n",
+        "            name_prefix=name_prefix,\n",
+        "        )\n",
+        "\n",
+        "        train_wno = find_normalize_obs_wrapper(self.env.envs[0])\n",
+        "        eval_wno  = find_normalize_obs_wrapper(env)\n",
+        "        if train_wno is not None and eval_wno is not None:\n",
+        "            eval_wno.obs_rms = train_wno.obs_rms\n",
+        "\n",
+        "        obs, _ = env.reset()\n",
+        "        ep_ret = 0.0\n",
+        "        for _ in range(max_steps):\n",
+        "            obs_t = torch.tensor(obs, dtype=torch.float32, device=self.device).unsqueeze(0)\n",
+        "            a, _, _, _, _ = self.ac.get_action_and_value(obs_t, action=None, deterministic=deterministic)\n",
+        "            obs, r, term, trunc, _ = env.step(a.squeeze(0).cpu().numpy())\n",
+        "            ep_ret += float(r)\n",
+        "            if term or trunc:\n",
+        "                break\n",
+        "\n",
+        "        env.close()\n",
+        "        print(f\"Evaluation video | ret={ep_ret:.2f} | folder={video_folder}\")\n",
+        "        show_video(video_folder)\n",
+        "\n",
         "    def train(self):\n",
         "        obs, _ = self.env.reset()\n",
         "        self.prev_mean[:] = 0.0\n",
@@ -1017,9 +999,9 @@
         "                            r_i = float(ep_r[i])\n",
         "                            l_i = int(ep_l[i])\n",
         "                            print(\n",
-        "                                f\"[TRAIN EP] step={self.global_step:9d} | upd={self.update:6d} | \"\n",
+        "                                f\"step={self.global_step:9d} | upd={self.update:6d} | \"\n",
         "                                f\"env={i:2d} | ret={r_i:7.2f} | len={l_i:4d} | \"\n",
-        "                                f\"jerk={'ON' if self.jerk_coef_current > 0.0 else 'OFF'} coef={self.jerk_coef_current:.5f}\"\n",
+        "                                f\"jerk={'on' if self.jerk_coef_current > 0.0 else 'off'} coef={self.jerk_coef_current:.5f}\"\n",
         "                            )\n",
         "                            self.ep_returns.append(r_i)\n",
         "                            self.ep_timesteps.append(int(self.global_step))\n",
@@ -1109,15 +1091,14 @@
         "                )\n",
         "\n",
         "                print(\n",
-        "                    f\"Eval(det) | upd {self.update:5d} | step {self.global_step:9d} | \"\n",
+        "                    f\"Evaluation | upd {self.update:5d} | step {self.global_step:9d} | \"\n",
         "                    f\"mean {mean_raw:7.2f} median {med_raw:7.2f} p75 {p75_raw:7.2f} \"\n",
         "                    f\"best {best_raw:7.2f} worst {worst_raw:7.2f} | \"\n",
         "                    f\"approx_kl {approx_kl:.4f} | ent {ent_coef:.4f} | \"\n",
         "                    f\"jerk_coef {self.jerk_coef_current:.5f} | hard {len(self.hard_pool.seeds)} success {len(self.success_pool.seeds)}\"\n",
         "                )\n",
         "\n",
-        "                # Updates pools from evaluation results\n",
-        "                seed_ret_sorted = sorted(seed_ret, key=lambda x: x[1])\n",
+        "                seed_ret_sorted = sorted(seed_ret, key=lambda x: x[1])  # ascending by return\n",
         "                k = max(1, int(len(seed_ret_sorted) * self.hard_pool_bottom_frac))\n",
         "                hard_seeds = [s for (s, r) in seed_ret_sorted[:k]]\n",
         "                for s in hard_seeds:\n",
@@ -1132,15 +1113,14 @@
         "                    self.jerk_enable_update = int(self.update)\n",
         "                    self.jerk_enable_step = int(self.global_step)\n",
         "                    print(\n",
-        "                        f\"✅ Jerk penalty RAMP ENABLED (eval p75 >= {self.jerk_start_p75}). \"\n",
-        "                        f\"Ramping to {self.jerk_coef_max} over {self.jerk_ramp_updates} updates.\"\n",
+        "                        f\"Jerk penalty started (eval p75 >= {self.jerk_start_p75}). \"\n",
+        "                        f\"Increasing to {self.jerk_coef_max} over {self.jerk_ramp_updates} updates.\"\n",
         "                    )\n",
         "\n",
-        "                # Saves best percentile\n",
         "                if p75_raw > self.best_eval_p75:\n",
         "                    self.best_eval_p75 = p75_raw\n",
         "                    torch.save(self.ac.state_dict(), BEST_PATH)\n",
-        "                    print(f\"New best (p75) saved\")\n",
+        "                    print(f\"New best saved -> {BEST_PATH}\")\n",
         "\n",
         "                self.eval_history.append({\n",
         "                    \"update\": int(self.update),\n",
@@ -1159,14 +1139,13 @@
         "\n",
         "                self.save(CKPT_PATH)\n",
         "                self.plot_results(window_size=50)\n",
+        "                self.record_eval_video(deterministic=True)\n",
         "\n",
         "            if (not do_eval) and (self.update % self.checkpoint_every_updates == 0):\n",
         "                self.save(CKPT_PATH)\n",
-        "                print(f\"Checkpoint saved\")\n",
+        "                print(f\"Checkpoint saved -> {CKPT_PATH}\")\n",
         "\n",
-        "            # Stopping criterion\n",
         "            if self.best_eval_p75 >= 300.0:\n",
-        "                print(\"Best eval P75 >= 300. Stopping.\")\n",
         "                break\n",
         "\n",
         "        torch.save(self.ac.state_dict(), FINAL_PATH)\n",
@@ -1217,21 +1196,11 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "env",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.12.3"
+      "name": "python"
     }
   },
   "nbformat": 4,
